# AstroLLM_project

./: docker-compose.yml  readme.md
.devcontainer/: devcontainer.json  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/workspace/: post_discord.py
app/workspace/IdeaGPT-magnetar/: arxiv_pdf_downloader_and_embedder_magnetar.ipynb  my_inference_idea_magnetar.ipynb
app/workspace/IdeaGPT-magnetar/results/: result_1696597218_magneter_1000_07_e4_a2.json  result_1696597293_magneter_1000_07_e4_a2.json
app/workspace/IdeaGPT-main/: arxiv_papers.html  arxiv_pdf_downloader.ipynb  example_idea.ipynb  my_inference_idea.ipynb  prepare_data.ipynb
app/workspace/IdeaGPT-main/DB_abstract/b4b0155d-4741-40d6-b627-a9f5fb9f5f6d/: index_metadata.pickle
app/workspace/IdeaGPT-main/results/: result_1696046366_1000_07_e4_a2.json  result_1696047387_1000_07_e4_a2.json  result_1696232851_1000_07_e4_a2.json
